Added Winter Games demo

--- a/R/jtran_essa_preso.Rmd
+++ b/R/jtran_essa_preso.Rmd
@@ -75,11 +75,9 @@ What mistakes are you willing to live with?
 --
 
 .footnote[
-
 [1] Argyris, 1976, ['Single-loop and double-loop models in research on decision-making'](http://academic.udayton.edu/richardghere/igo%20ngo%20research/argyris.pdf), _Administrative Science Quarterly_
 
 [2] Byrne, 2018, ['Why Google defind a new discipline to help humans make decisions'](https://www.fastcompany.com/90203073/why-google-defined-a-new-discipline-to-help-humans-make-decisions), _Fast Company_
-
 ]
 
 ---
@@ -142,9 +140,291 @@ class: inverse, center, bottom
 ---
 class: inverse, center, bottom
 
-# Data analytics in exercise and sport
+# A worked example with sports data
+## Summarising data from the Winter Olympics
 
-## A worked example
+---
+
+<br />
+Demo 1 uses the `winter` data set downloadable from this link: https://www.kaggle.com/the-guardian/olympic-games/data
+
+It includes all podium results from Winter Olympic Games that have taken place from 1924 to 2014, inclusive.
+
+<center>
+<img src="https://raw.githubusercontent.com/jacquietran/2019_essa_forum/master/images/ChloeKim.jpg" width="600px" />
+</center>
+
+---
+
+# Import the data
+
+``` {r demo1_import_data, message = FALSE}
+
+# The {readr} package is efficient for reading (importing) CSVs
+library(readr)
+
+# Read the data in
+winter <- read_csv(
+  here("data/winter.csv"), col_names = TRUE, col_types = NULL)
+
+```
+
+---
+
+# Check the data
+
+``` {r demo1_check_data, eval = FALSE}
+
+head(winter)
+
+```
+
+--
+
+``` {r demo1_check_data_eval, eval = TRUE, echo = FALSE}
+
+# This code chunk won't show on the slide but
+# the code will evaluate to print the first 6 rows of data
+# allowing for separation of the code chunk from its result
+head(winter)
+
+```
+
+---
+
+# Subset the data
+
+Let's say we are interested in comparing the **number of gold medals won** by **Canada, Norway, and Sweden** from the **last five Winter Olympic Games**.
+
+--
+
+We need to subset the data to focus only on:
+
+- Gold medal results
+
+--
+
+- Athletes from Canada (CAN), Norway (NOR), or Sweden (SWE), and
+
+--
+
+- Results from the last five Winter Olympics (1998 to 2014)
+
+---
+
+# Subset the data
+
+``` {r demo1_subset_data}
+
+# The {dplyr} package includes useful data manipulation functions
+library(dplyr)
+
+# Subset the data
+gold_medal_comparison <- winter %>%
+  filter(Medal == "Gold"
+         & Country %in% c("CAN", "NOR", "SWE")
+         & Year >= 1998)
+
+```
+
+---
+
+# Check the data
+
+``` {r demo1_check_subset}
+
+gold_medal_comparison
+
+```
+
+---
+
+# Wrangle the data
+
+In the `winter` data set, the data is structured such that **one row is one medal-winning athlete**.
+
+However...
+
+--
+
+- Team events (e.g., bobsleigh) comprise multiple athletes, and
+
+--
+
+- Within teams that achieve a podium finish, each athlete is awarded a medal.
+
+--
+
+For this analysis, we need to wrangle the data to get it into a format where **one row represents one gold medal per event** (rather than per athlete).
+
+---
+
+# Wrangle the data
+
+``` {r demo1_wrangle_data_part_1}
+
+# Create a new variable to identify each unique event
+gold_medal_comparison$unique_event_ID <-
+  paste(gold_medal_comparison$Year,
+        gold_medal_comparison$Sport,
+        gold_medal_comparison$Discipline,
+        gold_medal_comparison$Country,
+        gold_medal_comparison$Gender,
+        gold_medal_comparison$Event, sep="_")
+
+```
+
+---
+
+# Wrangle the data
+
+``` {r demo1_wrangle_data_part_2}
+
+gold_medal_comparison %>%
+  select(unique_event_ID)
+
+```
+
+---
+
+# Wrangle the data
+
+``` {r demo1_wrangle_data_part_3}
+
+# Identify duplicates
+gold_medal_comparison %>%
+  mutate(duplicates = duplicated(unique_event_ID)) %>%
+  select(unique_event_ID, duplicates)
+
+```
+
+---
+
+# Wrangle the data
+
+``` {r demo1_wrangle_data_part_4}
+
+# Remove duplicates from the data and
+# remove temporary variables used to identify duplicates
+gold_medal_comparison %>%
+  mutate(duplicates = duplicated(unique_event_ID)) %>%
+  filter(duplicates == FALSE) %>%       #<<
+  select(-unique_event_ID, -duplicates) #<<
+
+```
+
+---
+
+# Wrangle the data
+
+``` {r demo1_wrangle_data_part_5}
+
+gold_medal_comparison %>%
+  select(Year, Sport, Country, Event)
+
+```
+
+---
+
+# Calculate summary statistics
+
+The data is now in a format that is ready for calculating summary statistics.
+
+For instance, we can tabulate the total number of gold medals won by Canada, Norway, and Sweden at each of the Winter Games since 1998.
+
+---
+
+# Calculate summary statistics
+
+``` {r demo1_summary_stats_part_1, message = FALSE}
+
+# The reshape2 package is useful for manipulating data
+# from long-to-wide format and vice versa
+library(reshape2)
+
+# Calculate total number of gold medals per team per Winter Games
+gold_medal_totals <- gold_medal_comparison %>%
+  group_by(Year, City, Country) %>%
+  summarise(gold_medal_total = length(Medal)) %>%
+  ungroup()
+
+# Reshape the data from long-to-wide format for tabulating
+gold_medal_totals_wide <- dcast(
+  gold_medal_totals,
+  Year + City ~ Country,
+  value.var = "gold_medal_total")
+
+```
+
+---
+
+# Calculate summary statistics
+
+``` {r demo1_summary_stats_part_2}
+
+# Check the reshaped data
+gold_medal_totals_wide
+
+```
+
+``` {r demo1_summary_stats_part_3}
+
+# NAs appear in the data because Sweden did not win any gold medals
+# at the 1998 and 2002 Winter Games
+
+# Replace these NAs with zeroes
+gold_medal_totals_wide[is.na(gold_medal_totals_wide)] <- 0
+
+```
+
+---
+
+# Display summary statistics
+
+``` {r demo1_summary_stats_part_4, eval = FALSE}
+
+# The DT package is used to display interactive tables in HTML documents
+library(DT)
+
+# Display the table
+datatable(gold_medal_totals_wide, options = list(dom = 't'), rownames = FALSE)
+
+```
+
+---
+
+# Display summary statistics
+
+``` {r demo1_summary_stats_part_5, eval = TRUE, echo = FALSE, warning = FALSE}
+
+# This code chunk won't display on the slide but
+# the code will evaluate to display summary stats
+# in an interactive HTML table
+library(DT)
+
+datatable(gold_medal_totals_wide,
+          fillContainer = FALSE,
+          options = list(dom = 't'),
+          rownames = FALSE)
+
+```
+
+---
+
+# Calculate summary statistics
+
+We can use the data frame we've just created - gold medal totals per team per Games - to calculate the median number of gold medals won by Canada, Norway, and Sweden at the last five Games.
+
+``` {r demo1_summary_stats_part_6}
+
+gold_medal_medians <- gold_medal_totals_wide %>%
+  summarise(CAN = median(CAN),
+            NOR = median(NOR),
+            SWE = median(SWE))
+
+gold_medal_medians
+
+```
 
 ---
 
@@ -152,7 +432,7 @@ class: inverse, center, bottom
 
 Slide body text
 
-```{r eval = FALSE, tidy = FALSE}
+``` {r eval = FALSE, tidy = FALSE}
 
 # Some code I put here for aesthetic purposes ----------------------------------
 
