--- a/R/jtran_essa_preso.Rmd
+++ b/R/jtran_essa_preso.Rmd
@@ -197,6 +197,8 @@ To answer this question, we will use R to create this **data table**...
 <br />
 ...and this **data plot**!
 
+![](https://raw.githubusercontent.com/jacquietran/2019_essa_forum/master/images/demo1_data_plot.png)
+
 ---
 
 ## Import the data
@@ -589,37 +591,135 @@ head(gold_medal_comparison)
 
 ---
 
-## Calculate summary statistics
+## Calculate gold medal totals
 
 Now that we have tidied up the data into the format we need, we can calculate the **total number of gold medals** won by **Canada, Norway, and Sweden** at each of the **Winter Games between 1998 and 2014**.
 
 ---
 
-## Calculate summary statistics
+## Calculate gold medal totals
 
-``` {r demo1_summary_stats_part_1, message = FALSE}
-
-# The {reshape2} package is useful for manipulating data
-# from long-to-wide format and vice versa
-library(reshape2)
+``` {r demo1_summary_stats_part_1a, message = FALSE}
 
 # Calculate total number of gold medals per team per Winter Games
-gold_medal_totals <- gold_medal_comparison %>%
+gold_medal_totals <- gold_medal_comparison %>%    #<<
   group_by(Year, City, Country) %>%
   summarise(gold_medal_total = length(Medal)) %>%
   ungroup()
-
-# Reshape the data from long-to-wide format for tabulating
-gold_medal_totals_wide <- dcast(
-  gold_medal_totals,
-  Year + City ~ Country,
-  value.var = "gold_medal_total")
 
 ```
 
 ---
 
-## Calculate summary statistics
+## Calculate gold medal totals
+
+``` {r demo1_summary_stats_part_1b, message = FALSE, eval = FALSE}
+
+# Calculate total number of gold medals per team per Winter Games
+gold_medal_totals <- gold_medal_comparison %>%
+  group_by(Year, City, Country) %>%               #<<
+  summarise(gold_medal_total = length(Medal)) %>%
+  ungroup()
+
+```
+
+---
+
+## Calculate gold medal totals
+
+``` {r demo1_summary_stats_part_1c, message = FALSE, eval = FALSE}
+
+# Calculate total number of gold medals per team per Winter Games
+gold_medal_totals <- gold_medal_comparison %>%
+  group_by(Year, City, Country) %>%
+  summarise(gold_medal_total = length(Medal)) %>% #<<
+  ungroup()
+
+```
+
+---
+
+## Calculate gold medal totals
+
+``` {r demo1_summary_stats_part_1d, message = FALSE, eval = FALSE}
+
+# Calculate total number of gold medals per team per Winter Games
+gold_medal_totals <- gold_medal_comparison %>%
+  group_by(Year, City, Country) %>%
+  summarise(gold_medal_total = length(Medal)) %>%
+  ungroup()                                       #<<
+
+```
+
+---
+
+## Calculate gold medal totals
+
+When we check the data, we can see it is in long format:
+
+``` {r demo1_summary_stats_part1e}
+
+gold_medal_totals
+
+```
+
+---
+
+## Reshape gold medal totals
+
+We can reshape the data from long to wide format, to make it more **human-readable** when we display the gold medal totals in a table.
+
+``` {r demo1_summary_stats_part2a, warning = FALSE}
+
+# The {tidyr} package helps to convert between
+# long and wide data formats
+library(tidyr) #<<
+
+# Spread the data from long to wide format for tabulating
+gold_medal_totals_wide <- gold_medal_totals %>%
+  spread(key = Country, value = gold_medal_total)
+
+```
+
+---
+
+## Reshape gold medal totals
+
+We can reshape the data from long to wide format, to make it more **human-readable** when we display the gold medal totals in a table.
+
+``` {r demo1_summary_stats_part2b, warning = FALSE, eval = FALSE}
+
+# The {tidyr} package helps to convert between
+# long and wide data formats
+library(tidyr)
+
+# Spread the data from long to wide format for tabulating
+gold_medal_totals_wide <- gold_medal_totals %>%   #<<
+  spread(key = Country, value = gold_medal_total)
+
+```
+
+---
+
+## Reshape gold medal totals
+
+We can reshape the data from long to wide format, to make it more **human-readable** when we display the gold medal totals in a table.
+
+``` {r demo1_summary_stats_part2c, warning = FALSE, eval = FALSE}
+
+# The {tidyr} package helps to convert between
+# long and wide data formats
+library(tidyr)
+
+# Spread the data from long to wide format for tabulating
+gold_medal_totals_wide <- gold_medal_totals %>%
+  spread(key = Country, value = gold_medal_total) #<<
+
+```
+
+---
+
+## Reshape gold medal totals
 
 ``` {r demo1_summary_stats_part_2}
 
@@ -628,34 +728,69 @@ gold_medal_totals_wide
 
 ```
 
+--
+
 ``` {r demo1_summary_stats_part_3}
 
-# NAs appear in the data because Sweden did not win any gold medals
+# NAs appear because SWE did not win any gold medals
 # at the 1998 and 2002 Winter Games
 
-# Replace these NAs with zeroes
-gold_medal_totals_wide[is.na(gold_medal_totals_wide)] <- 0
+# Replace NAs with zeroes
+gold_medal_totals_wide[is.na(gold_medal_totals_wide)] <- 0 #<<
 
 ```
 
 ---
 
-## Display summary statistics
+## Display gold medal totals
 
-``` {r demo1_summary_stats_part_4, eval = FALSE}
+``` {r demo1_summary_stats_part_4a, eval = FALSE}
+
+# The {DT} package is used to display interactive tables in HTML documents
+library(DT) #<<
+
+# Display the totals in a table, with nicer column names
+datatable(gold_medal_totals_wide,
+          rownames = FALSE,
+          options = list(dom = "t"))
+
+```
+
+---
+
+## Display gold medal totals
+
+``` {r demo1_summary_stats_part_4b, eval = FALSE}
 
 # The {DT} package is used to display interactive tables in HTML documents
 library(DT)
 
-# Display the totals in a table
-datatable(gold_medal_totals_wide,
-          options = list(dom = 't'), rownames = FALSE)
+# Display the totals in a table, with nicer column names
+datatable(gold_medal_totals_wide,    #<<
+          rownames = FALSE,
+          options = list(dom = "t"))
 
 ```
 
 ---
 
-## Display summary statistics
+## Display gold medal totals
+
+``` {r demo1_summary_stats_part_4c, eval = FALSE}
+
+# The {DT} package is used to display interactive tables in HTML documents
+library(DT)
+
+# Display the totals in a table, with nicer column names
+datatable(gold_medal_totals_wide,
+          rownames = FALSE,          #<<
+          options = list(dom = "t")) #<<
+
+```
+
+---
+
+## Display gold medal totals
 
 ``` {r demo1_summary_stats_part_5, eval = TRUE, echo = FALSE, warning = FALSE}
 
@@ -665,9 +800,8 @@ datatable(gold_medal_totals_wide,
 library(DT)
 
 datatable(gold_medal_totals_wide,
-          fillContainer = FALSE,
-          options = list(dom = 't'),
-          rownames = FALSE)
+          rownames = FALSE,
+          options = list(dom = "t"))
 
 ```
 
@@ -675,44 +809,567 @@ datatable(gold_medal_totals_wide,
 
 ## Plot the data
 
-We can also plot the gold medal totals we've calculated, which may be more useful as a visual comparison between countries and over time.
+We can also plot the gold medal totals we've calculated, which will make it easier to draw visual comparisons between countries and over time.
 
 --
 
-To create the plot, we will use:
-- The `ggplot2` R package
-- The `gold_medal_totals` data that we created earlier, in long format.
+Remember our motivating question: **How many gold medals** were won by **Canada, Norway, and Sweden** at the **last five Winter Olympic Games**, up to 2014?
 
---
+---
 
-The **gg** in `ggplot2` stands for **[Grammar of Graphics](https://ggplot2.tidyverse.org/)**, the theoretical foundation for how the package works.
+<br />
+...we will learn how to create **this plot**:
+
+![](https://raw.githubusercontent.com/jacquietran/2019_essa_forum/master/images/demo1_data_plot.png)
 
 ---
 
 ## Plot the data
 
-``` {r demo1_build_plot}
+To create the plot, we will use:
+- The `gold_medal_totals` data that we created earlier, in long format.
+- The `ggplot2` R package
 
-# The {ggplot2} package is a powerful and fully featured
+``` {r load_ggplot2, message = FALSE, warning = FALSE}
+
+# The {ggplot2} package is a powerful, feature-rich
 # R package for creating data visualisations
 library(ggplot2)
 
-# Build the plot
-p <- ggplot(data = gold_medal_totals,
+```
+
+---
+
+## gg = Grammar of Graphics
+
+`ggplot2` draws upon a **layered Grammar of Graphics** as a theoretical foundation for how to make plots (Wilkinson et al., 2005; Wickham, 2010).
+
+--
+
+Think of it like breaking down a plot to its most basic elements...
+
+.footnote[
+[1] Wilkinson et al., 2005, _['The Grammar of Graphics'](https://www.amazon.com/Grammar-Graphics-Statistics-Computing/dp/0387245448)_.
+
+[2] Wickham, 2010, ['A layered grammar of graphics'](https://vita.had.co.nz/papers/layered-grammar.html), _Journal of Computational and Graphical Statistics_
+]
+
+---
+class: center, middle
+
+![](https://raw.githubusercontent.com/jacquietran/2019_essa_forum/master/images/gg_fig1.PNG)
+
+Wickham, 2010, **['A layered grammar of graphics'](https://vita.had.co.nz/papers/layered-grammar.html)**
+
+---
+class: center, middle
+
+<img src="https://raw.githubusercontent.com/jacquietran/2019_essa_forum/master/images/gg_fig2.PNG" width="717px" />
+
+Wickham, 2010, **['A layered grammar of graphics'](https://vita.had.co.nz/papers/layered-grammar.html)**
+
+---
+
+## Plot the data
+
+``` {r demo1_build_plot_part_1a}
+
+# Start building the plot, layer-by-layer
+p <- ggplot(data = gold_medal_totals,           #<<
             aes(x = Year, y = gold_medal_total,
                 fill = Country))
-p <- p + facet_wrap(~Country, nrow = 1)
 p <- p + geom_bar(stat = "identity")
 
 ```
 
 ---
 
-``` {r demo1_display_plot, echo = FALSE, fig.width = 16, fig.height = 8}
+## Plot the data
+
+``` {r demo1_build_plot_part_1b, eval = FALSE}
+
+# Start building the plot, layer-by-layer
+p <- ggplot(data = gold_medal_totals,
+            aes(x = Year, y = gold_medal_total, #<<
+                fill = Country))
+p <- p + geom_bar(stat = "identity")
+
+```
+
+---
+
+## Plot the data
+
+``` {r demo1_build_plot_part_1c, eval = FALSE}
+
+# Start building the plot, layer-by-layer
+p <- ggplot(data = gold_medal_totals,
+            aes(x = Year, y = gold_medal_total,
+                fill = Country))                #<<
+p <- p + geom_bar(stat = "identity")
+
+```
+
+---
+
+## Plot the data
+
+``` {r demo1_build_plot_part_1d, eval = FALSE}
+
+# Start building the plot, layer-by-layer
+p <- ggplot(data = gold_medal_totals,
+            aes(x = Year, y = gold_medal_total,
+                fill = Country))
+p <- p + geom_bar(stat = "identity")            #<<
+
+```
+
+--
+
+To display the plot, call the object `p`:
+
+``` {r demo1_display_plot_1a, eval = FALSE}
 
 p
 
 ```
+
+---
+class: center, middle
+
+``` {r demo1_display_plot_1b, echo = FALSE, fig.width = 16, fig.height = 7.5}
+
+# This code chunk will evaluate but not display
+p
+
+```
+
+It's a start, but...
+
+---
+
+## Areas for improvement
+
+Show countries side-by-side (rather than stacked)
+
+--
+
+Informative plot and axis titles
+
+--
+
+Clearer axis breaks
+
+--
+
+Colourblind-friendly palette
+
+--
+
+Larger font sizes
+
+---
+
+## Countries shown side-by-side
+
+To the previous code chunk we started as the base for this plot, we **add layers** to specify modifications to the plot:
+
+``` {r demo1_build_plot_part_2, eval = FALSE}
+
+p <- p + facet_wrap(~Country, nrow = 1)
+
+```
+
+---
+class: center, middle
+
+``` {r demo1_display_plot_2, echo = FALSE, fig.width = 16, fig.height = 7.5}
+
+# Build plot
+p <- ggplot(data = gold_medal_totals,
+            aes(x = Year, y = gold_medal_total,
+                fill = Country))
+p <- p + geom_bar(stat = "identity")
+p <- p + facet_wrap(~Country, nrow = 1)
+
+# Display plot
+p
+
+```
+
+A bit better, but now the legend is redundant, so we can add it to our 'to do' list.
+
+---
+
+## Areas for improvement
+
+~~Show countries side-by-side (rather than stacked)~~
+
+Informative plot and axis titles
+
+Clearer x axis breaks
+
+Colourblind-friendly palette
+
+Larger font sizes
+
+Remove legend
+
+---
+
+## Informative titles
+
+``` {r demo1_build_plot_part_3}
+
+p <- p + labs(
+  title = "Canada increased its Winter Games gold medal haul over 20 years",
+  x = "Year",
+  y = "Total # of gold medals won")
+
+```
+
+---
+
+``` {r demo1_display_plot_3, echo = FALSE, fig.width = 16, fig.height = 7.5}
+
+# Build plot
+p <- ggplot(data = gold_medal_totals,
+            aes(x = Year, y = gold_medal_total,
+                fill = Country))
+p <- p + geom_bar(stat = "identity")
+p <- p + facet_wrap(~Country, nrow = 1)
+p <- p + labs(
+  title = "Canada increased its Winter Games gold medal haul over 20 years",
+  x = "Year",
+  y = "Total # of gold medals won")
+
+# Display plot
+p
+
+```
+
+---
+
+## Areas for improvement
+
+~~Show countries side-by-side (rather than stacked)~~
+
+~~Informative plot and axis titles~~
+
+Clearer x axis breaks
+
+Colourblind-friendly palette
+
+Larger font sizes
+
+Remove legend
+
+---
+
+## Clearer x axis breaks
+
+``` {r demo1_build_plot_part_4}
+
+p <- p + scale_x_continuous(
+  limits = c(1996,2016),
+  breaks = seq(1998,2014, by = 4))
+
+```
+
+---
+
+``` {r demo1_display_plot_4, echo = FALSE, fig.width = 16, fig.height = 7.5}
+
+# Build plot
+p <- ggplot(data = gold_medal_totals,
+            aes(x = Year, y = gold_medal_total,
+                fill = Country))
+p <- p + geom_bar(stat = "identity")
+p <- p + facet_wrap(~Country, nrow = 1)
+p <- p + labs(
+  title = "Canada increased its Winter Games gold medal haul over 20 years",
+  x = "Year",
+  y = "Total # of gold medals won")
+p <- p + scale_x_continuous(
+  limits = c(1996,2016),
+  breaks = seq(1998,2014, by = 4))
+
+# Display plot
+p
+
+```
+
+---
+
+## Areas for improvement
+
+~~Show countries side-by-side (rather than stacked)~~
+
+~~Informative plot and axis titles~~
+
+~~Clearer x axis breaks~~
+
+Colourblind-friendly palette
+
+Larger font sizes
+
+Remove legend
+
+---
+
+## Colourblind-friendly palette
+
+_'As many as 8% of men and 0.5 of women with Northern European ancestry have the common form of red-green color blindness.'_ - National Eye Institute, 2015
+
+--
+
+``` {r load_dichromat, eval = FALSE}
+
+# The {dichromat} package contains 17 palettes that are
+# "suitable for people with deficient or anomalous red-green vision"
+library(dichromat)
+
+```
+
+.footnote[
+[1] National Eye Institute, 2015, ['Facts about color blindness'](https://nei.nih.gov/health/color_blindness/facts_about).
+
+[2] University of British Columbia, ['Using colors in R: Accommodating color blindness'](http://stat545.com/block018_colors.html#accomodating-color-blindness), _STAT 545 course materials_.
+]
+
+---
+class: center, middle
+
+![](https://raw.githubusercontent.com/jacquietran/2019_essa_forum/master/images/dichromat-colorschemes-1.png)
+
+STAT 545: **[Using colors in R](http://stat545.com/block018_colors.html#accomodating-color-blindness)**
+
+---
+
+## Colourblind-friendly palette
+
+``` {r demo1_build_plot_part_5, eval = FALSE}
+
+p <- p + scale_fill_manual(
+  values = c(
+    "CAN" = colorschemes$BluetoGray.8[1],
+    "NOR" = colorschemes$BluetoGray.8[2],
+    "SWE" = colorschemes$BluetoGray.8[7]))
+
+```
+
+---
+
+``` {r demo1_display_plot_5, echo = FALSE, fig.width = 16, fig.height = 7.5}
+
+library(dichromat)
+
+# Build plot
+p <- ggplot(data = gold_medal_totals,
+            aes(x = Year, y = gold_medal_total,
+                fill = Country))
+p <- p + geom_bar(stat = "identity")
+p <- p + facet_wrap(~Country, nrow = 1)
+p <- p + labs(
+  title = "Canada increased its Winter Games gold medal haul over 20 years",
+  x = "Year",
+  y = "Total # of gold medals won")
+p <- p + scale_x_continuous(
+  limits = c(1996,2016),
+  breaks = seq(1998,2014, by = 4))
+p <- p + scale_fill_manual(
+  values = c(
+    "CAN" = colorschemes$BluetoGray.8[1],
+    "NOR" = colorschemes$BluetoGray.8[2],
+    "SWE" = colorschemes$BluetoGray.8[7]))
+
+# Display plot
+p
+
+```
+
+---
+
+## Areas for improvement
+
+~~Show countries side-by-side (rather than stacked)~~
+
+~~Informative plot and axis titles~~
+
+~~Clearer x axis breaks~~
+
+~~Colourblind-friendly palette~~
+
+Larger font sizes
+
+Remove legend
+
+---
+
+## Larger font sizes
+
+``` {r demo1_build_plot_part_6, eval = FALSE}
+
+# Change the base font size for all text elements
+p <- p + theme(
+  text = element_text(size = 28))
+
+```
+
+---
+
+``` {r demo1_display_plot_6, echo = FALSE, fig.width = 16, fig.height = 7.5}
+
+# Build plot
+p <- ggplot(data = gold_medal_totals,
+            aes(x = Year, y = gold_medal_total,
+                fill = Country))
+p <- p + geom_bar(stat = "identity")
+p <- p + facet_wrap(~Country, nrow = 1)
+p <- p + labs(
+  title = "Canada increased its Winter Games gold medal haul over 20 years",
+  x = "Year",
+  y = "Total # of gold medals won")
+p <- p + scale_x_continuous(
+  limits = c(1996,2016),
+  breaks = seq(1998,2014, by = 4))
+p <- p + scale_fill_manual(
+  values = c(
+    "CAN" = colorschemes$BluetoGray.8[1],
+    "NOR" = colorschemes$BluetoGray.8[2],
+    "SWE" = colorschemes$BluetoGray.8[7]))
+p <- p + theme(
+  text = element_text(size = 28))
+
+# Display plot
+p
+
+```
+
+Notice that the different text elements show a hierarchy of font sizes.
+
+---
+
+# Areas for improvement
+
+~~Show countries side-by-side (rather than stacked)~~
+
+~~Informative plot and axis titles~~
+
+~~Clearer x axis breaks~~
+
+~~Colourblind-friendly palette~~
+
+~~Larger font sizes~~
+
+Remove legend
+
+---
+
+## Remove legend
+
+``` {r demo1_build_plot_part_7, eval = FALSE}
+
+# Change the base font size for all text elements
+p <- p + theme(
+  text = element_text(size = 28),
+  legend.position = "none") #<<
+
+```
+
+---
+class: center, middle
+
+``` {r demo1_display_plot_7, echo = FALSE, fig.width = 16, fig.height = 7.5}
+
+# Build plot
+p <- ggplot(data = gold_medal_totals,
+            aes(x = Year, y = gold_medal_total,
+                fill = Country))
+p <- p + geom_bar(stat = "identity")
+p <- p + facet_wrap(~Country, nrow = 1)
+p <- p + labs(
+  title = "Canada increased its Winter Games gold medal haul over 20 years",
+  x = "Year",
+  y = "Total # of gold medals won")
+p <- p + scale_x_continuous(
+  limits = c(1996,2016),
+  breaks = seq(1998,2014, by = 4))
+p <- p + scale_fill_manual(
+  values = c(
+    "CAN" = colorschemes$BluetoGray.8[1],
+    "NOR" = colorschemes$BluetoGray.8[2],
+    "SWE" = colorschemes$BluetoGray.8[7]))
+p <- p + theme(
+  text = element_text(size = 28),
+  legend.position = "none")
+
+# Display plot
+p
+
+```
+
+We're done with our major improvements!
+
+---
+
+## Change position of titles
+
+With our last few tweaks, we can improve readability by increasing the whitespace between the titles and the plot area.
+
+``` {r demo1_build_plot_8, eval = FALSE}
+
+p <- p + theme(
+  text = element_text(size = 28),
+  legend.position = "none",
+  plot.title = element_text(margin = margin(b = 15, unit = "pt")),   #<<
+  axis.title.x = element_text(margin = margin(t = 15, unit = "pt")), #<<
+  axis.title.y = element_text(margin = margin(r = 15, unit = "pt"))) #<<
+
+```
+
+---
+class: center, middle
+
+``` {r demo1_display_plot_8, echo = FALSE, fig.width = 16, fig.height = 7.5}
+
+# Build plot
+p <- ggplot(data = gold_medal_totals,
+            aes(x = Year, y = gold_medal_total,
+                fill = Country))
+p <- p + geom_bar(stat = "identity")
+p <- p + facet_wrap(~Country, nrow = 1)
+p <- p + labs(
+  title = "Canada increased its Winter Games gold medal haul over 20 years",
+  x = "Year",
+  y = "Total # of gold medals won")
+p <- p + scale_x_continuous(
+  limits = c(1996,2016),
+  breaks = seq(1998,2014, by = 4))
+p <- p + scale_fill_manual(
+  values = c(
+    "CAN" = colorschemes$BluetoGray.8[1],
+    "NOR" = colorschemes$BluetoGray.8[2],
+    "SWE" = colorschemes$BluetoGray.8[7]))
+p <- p + theme(
+  text = element_text(size = 28),
+  legend.position = "none",
+  plot.title = element_text(margin = margin(b = 15, unit = "pt")),
+  axis.title.x = element_text(margin = margin(t = 15, unit = "pt")),
+  axis.title.y = element_text(margin = margin(r = 15, unit = "pt")))
+
+# Display plot
+p
+
+```
+
+All done!
+
+---
+class: inverse, center, middle
+
+# Worked example with exercise data
+## National Health Survey
 
 ---
 class: inverse, center, middle
