--- a/R/jtran_essa_preso.Rmd
+++ b/R/jtran_essa_preso.Rmd
@@ -26,7 +26,7 @@ library(xaringanthemer)
 ```{r xaringan_themer, include = FALSE}
 
 mono_light(
-  base_color = ghibli_palette("MononokeDark")[3],
+  base_color = ghibli_palette("YesterdayDark")[2],
   header_font_google = google_font("Walter Turncoat"),
   header_h1_font_size = "65px",
   header_h2_font_size = "50px",
@@ -1338,7 +1338,280 @@ All done!
 class: inverse, center, middle
 
 # Worked example with exercise data
-## National Health Survey
+## National Health Survey 2017–2018
+
+---
+
+<br />
+This example uses publicly available data from the Australian Bureau of Statistics, drawn from the **National Health Survey 2017–2018**.
+
+<center>
+<img src="https://raw.githubusercontent.com/jacquietran/2019_essa_forum/master/images/cyclist-3202481_1920.jpg" width="600px" />
+</center>
+
+--
+
+You can download the example data set used and many others from this link:  
+**[4364.0.55.001 - National Health Survey: First Results, 2017–18](https://www.abs.gov.au/AUSSTATS/abs@.nsf/DetailsPage/4364.0.55.0012017-18?OpenDocument)**
+
+---
+class: inverse, center, middle
+
+# 'Start with the end in mind.'
+
+---
+class: center, middle
+
+## Among **Australians aged 15 years and older**,
+## **how much physical activity** do they engage in
+## (**minutes per week**)?
+
+---
+
+To answer this question, we will use R to create this **data plot**:
+
+---
+
+## Import the data
+
+The Australian Bureau of Statistics typically provides data sets in _.xls_ format (MS Excel 1997-2003 spreadsheet).
+
+``` {r demo2_import_data_part1}
+
+# If we were starting a new R session, we would need to
+# re-load the {here} package using the command
+# library(here) #<<
+
+# The {readxl} R package efficiently imports Excel spreadsheets into R
+library(readxl)
+
+```
+
+---
+
+## Import the data
+
+The Australian Bureau of Statistics typically provides data sets in _.xls_ format (MS Excel 1997-2003 spreadsheet).
+
+``` {r demo2_import_data_part2, eval = FALSE}
+
+# If we were starting a new R session, we would need to
+# re-load the {here} package using the command
+# library(here)
+
+# The {readxl} R package efficiently imports Excel spreadsheets into R
+library(readxl) #<<
+
+```
+
+---
+
+## Import the data
+
+``` {r demo2_import_data_part3, message = FALSE}
+
+# Import the data into your R session
+activity_data <- read_excel(
+  here("data/4364055001do013_20172018.xls"),
+  sheet = "Table 13.1_Estimates, persons",
+  range = "A21:L26", col_names = FALSE)
+
+```
+
+---
+class: center, middle
+
+![](https://raw.githubusercontent.com/jacquietran/2019_essa_forum/master/images/demo2_data_screenshot.PNG)
+
+---
+
+## Import the data
+
+``` {r demo2_import_data_part_4, message = FALSE}
+
+# Import the data headers (column names into your R session)
+headers <- read_excel(
+  here("data/4364055001do013_20172018.xls"),
+  sheet = "Table 13.1_Estimates, persons",
+  range = "B7:L7", col_names = FALSE)
+
+```
+
+---
+class: center, middle
+
+![](https://raw.githubusercontent.com/jacquietran/2019_essa_forum/master/images/demo2_header_screenshot.PNG)
+
+---
+
+## Clean the data
+
+``` {r demo2_clean_data_part1}
+
+# Define column names by referring to headers data frame
+colnames(activity_data) <- c(
+  "duration", "age_15_17", "age_18_24", "age_25_34", "age_35_44", "age_45_54",
+  "age_55_64", "age_65_74", "drop1", "drop2", "age_75_84", "age_85_plus")
+
+```
+
+---
+
+## Clean the data
+
+``` {r demo2_clean_data_part2}
+
+library(dplyr)
+
+# Drop unnecessary columns
+activity_data <- activity_data %>%
+  select(-starts_with("drop"))
+
+```
+
+---
+
+## Clean the data
+
+``` {r demo2_clean_data_part3}
+
+library(stringr)
+
+# Remove footnote references
+activity_data <- activity_data %>%
+  mutate(duration = str_replace(duration, "\\(.*\\)", "")) %>%
+  mutate(duration = str_trim(duration, side = "both"))
+
+```
+
+---
+
+## Subset the data
+
+``` {r demo2_subset_data_part1}
+
+library(tidyr)
+
+# Extract age segment totals to separate data frame
+# and convert wide to long
+age_segment_totals <- activity_data %>%
+  filter(duration == "Total") %>%
+  gather("segment", "resp_estimate", -duration) %>%
+  select(-duration)
+
+```
+
+---
+
+## Wrangle the data
+
+``` {r demo2_wrangle_data_part1}
+
+# Remove rows that present totals data (different scale!)
+# and convert wide to long
+activity_data_long <- activity_data %>%
+  filter(!grepl("Total", duration)) %>%
+  gather("segment", "estimate", -duration)
+
+```
+
+---
+
+## Wrangle the data
+
+``` {r demo2_wrangle_data_part2}
+
+# Merge data frames together
+activity_data_long <- left_join(
+  activity_data_long, age_segment_totals)
+
+```
+
+---
+
+## Wrangle the data
+
+``` {r demo2_wrangle_data_part3}
+
+# Calculate estimates as percentage of respondents per age segment
+activity_data_long <- activity_data_long %>%
+  mutate(pct_of_resp = round(estimate / resp_estimate * 100, 1))
+
+```
+
+---
+
+## Wrangle the data
+
+``` {r demo2_wrangle_data_part4}
+
+# Specify factor levels in duration
+activity_data_long$duration <- factor(
+  activity_data_long$duration,
+  levels = rev(unique(activity_data_long$duration)))
+
+```
+
+---
+
+# Build the plot
+
+``` {r demo2_build_plot, eval = FALSE}
+
+library(ggplot2)
+
+p <- ggplot(activity_data_long,
+            aes(x = duration, y = pct_of_resp,
+                fill = duration,
+                label = paste0(pct_of_resp, "%")))
+p <- p + facet_wrap(vars(segment))
+p <- p + geom_bar(stat = "identity")
+p <- p + geom_text(hjust = -0.2)
+p <- p + scale_y_continuous(
+  limits = c(0, 65),
+  breaks = seq(0, 60, by = 20))
+p <- p + labs(
+  title = "~50% of Australians aged 85+ reported 0 min of physical activity in the last week",
+  caption = "Source: National Health Survey 2017–2018",
+  x = NULL, y = NULL)
+p <- p + scale_fill_brewer(palette = "RdBu", direction = -1)
+p <- p + coord_flip()
+p <- p + theme(
+  text = element_text(size = 28),
+  legend.position = "none")
+
+```
+
+---
+
+``` {r demo2_display_plot, echo = FALSE, fig.width = 16, fig.height = 7.5}
+
+library(ggplot2)
+
+p <- ggplot(activity_data_long,
+            aes(x = duration, y = pct_of_resp,
+                fill = duration,
+                label = paste0(pct_of_resp, "%")))
+p <- p + facet_wrap(vars(segment))
+p <- p + geom_bar(stat = "identity")
+p <- p + geom_text(hjust = -0.2)
+p <- p + scale_y_continuous(
+  limits = c(0, 65),
+  breaks = seq(0, 60, by = 20))
+p <- p + labs(
+  title = "~50% of Australians aged 85+ reported 0 min of\nphysical activity in the last week",
+  caption = "Source: National Health Survey 2017–2018",
+  x = NULL, y = NULL)
+p <- p + scale_fill_brewer(palette = "RdBu", direction = -1)
+p <- p + coord_flip()
+p <- p + theme(
+  text = element_text(size = 28),
+  legend.position = "none")
+
+# Display plot
+p
+
+```
 
 ---
 class: inverse, center, middle
@@ -1380,4 +1653,3 @@ Presentation slides here:
 
 Full suite of materials (code, data) online:  
 [**https://github.com/jacquietran/2019_essa_forum**](https://github.com/jacquietran/2019_essa_forum)
-
